# alpheratz

./: .gitignore  Cargo.toml  Makefile  README.md  elf-stage.ld  example.toml  gen-reloc.py  rust-toolchain.toml
.cargo/: config.toml
src/: boot.rs  config.rs  download.rs  fsutil.rs  main.rs  menu.rs  net.rs  serial.rs
src/boot/: linux.rs  mod.rs
src/boot/canicula/: mod.rs  x86_64.rs
src/page_table/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
