[package]
name = "alpheratz"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
toml = { version = "1.0", default-features = false, features = ["parse", "serde"] }
uefi = { version = "0.36.1", features = ["alloc", "global_allocator"] }
uefi-raw = "0.13.0"
